# Game-glfw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.sh  main.cpp
.github/: FUNDING.yml
assets/Shaders/: Color-Position-Projection.frag  Color-Position-Projection.vert  ColorAndPosition.frag  ColorAndPosition.vert  FontVertexShader.glsl  FragmentShader.glsl  ModelViewProjection.frag  ModelViewProjection.vert  ModelViewProjectionTextured.frag  ModelViewProjectionTextured.vert  VertexShader.glsl
assets/images/: MenuTexture.psd
components/: Button.cpp  Button.h  Cube.cpp  Cube.h  InputText.cpp  InputText.h  ObjModel.cpp  ObjModel.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  TextDraw.cpp  TextDraw.h
components/GUI/: Menu.cpp  Menu.h
entities/: Entity.cpp  Entity.h  Loader.cpp  Loader.h  RawModel.cpp  RawModel.h
tests/: LoadVert.cpp  testLoaderOBJ.cpp
util/: Camera.cpp  Camera.h  Character.h  FontConfigs.cpp  FontConfigs.h  Maths.cpp  Maths.h  ObjLoader.cpp  ObjLoader.h  ProjectionMatrix.cpp  ProjectionMatrix.h  Shader.cpp  Shader.h
util/io/: Mouse.cpp  Mouse.h
